infra/k8s/production/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eido-web
  namespace: eido
spec:
  selector:
    app: eido-web
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
